# hackpue2025-hera

./: README.md
hack_pue_2025/hera_robot_bringup/config/: gz_bridge.yaml
hack_pue_2025/hera_robot_bringup/launch/: gz_hera.launch.py
hack_pue_2025/hera_robot_description/launch/: description.launch.py
hack_pue_2025/hera_robot_description/urdf/: camera.xacro  common_properties.xacro  diff_hera.urdf.xacro  lidar.xacro  mobile_base.xacro  mobile_base_gazebo.xacro
hack_pue_2025/hera_robot_navigation/hera_robot_navigation/: hera_nav2.py  patrol_voice_detector.py  set_initial_pose.py
hack_pue_2025/hera_voice_identifier/hera_voice_identifier/: grabador_referencia.py  voz_identifier_node.py
voz_identifier/: package.xml  setup.cfg  setup.py
